crates/adapters/treasury/tests/snapshots/parse__bp4_agency_resourcing_2024_25.snap
---
source: crates/adapters/treasury/tests/parse.rs
expression: snapshot
---
{
  "observation_count": 6,
  "series_count": 2,
  "first_rows": [
    {
      "dataflow_id": "treasury.budget_papers",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2024-25",
        "line_item": "department_of_the_treasury",
        "paper": "bp4-agency-resourcing",
        "table": "table_1_agency_resourcing_by_portfolio_m"
      },
      "unit": "$ million",
      "time": "2022-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 275.0,
      "status": "Normal",
      "attributes": {
        "artifact_date": "2024-05-14",
        "attribution": "Source: Australian Government, The Treasury",
        "budget_year": "2024-25",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "license": "CC-BY-4.0",
        "license_url": "https://creativecommons.org/licenses/by/4.0/",
        "paper": "Budget Paper No. 4",
        "paper_slug": "bp4-agency-resourcing",
        "publication_title": "Agency resourcing table",
        "schema_hash": "d1a529ef09ad69e5f3c0a2e6da36dcf4449ace0fad82c2a7f2af82ca1a5e281a",
        "source": "Australian Government, The Treasury",
        "source_url": "https://archive.budget.gov.au/2024-25/bp4/download/bp4_05_agency_resourcing_tables.pdf",
        "table_page": "12",
        "table_title": "Table 1: Agency resourcing by portfolio ($m)",
        "treasury_line_item": "Department of the Treasury",
        "treasury_period_label": "2022-23"
      },
      "source_artifact_id": "13ae98bc66404753efd5770ec5a3b12ebb3c610c6046e6a5934f8f262e747c7a"
    },
    {
      "dataflow_id": "treasury.budget_papers",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2024-25",
        "line_item": "department_of_the_treasury",
        "paper": "bp4-agency-resourcing",
        "table": "table_1_agency_resourcing_by_portfolio_m"
      },
      "unit": "$ million",
      "time": "2023-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 288.5,
      "status": "Estimated",
      "attributes": {
        "artifact_date": "2024-05-14",
        "attribution": "Source: Australian Government, The Treasury",
        "budget_year": "2024-25",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "license": "CC-BY-4.0",
        "license_url": "https://creativecommons.org/licenses/by/4.0/",
        "paper": "Budget Paper No. 4",
        "paper_slug": "bp4-agency-resourcing",
        "publication_title": "Agency resourcing table",
        "schema_hash": "d1a529ef09ad69e5f3c0a2e6da36dcf4449ace0fad82c2a7f2af82ca1a5e281a",
        "source": "Australian Government, The Treasury",
        "source_url": "https://archive.budget.gov.au/2024-25/bp4/download/bp4_05_agency_resourcing_tables.pdf",
        "table_page": "12",
        "table_title": "Table 1: Agency resourcing by portfolio ($m)",
        "treasury_line_item": "Department of the Treasury",
        "treasury_period_label": "2023-24"
      },
      "source_artifact_id": "13ae98bc66404753efd5770ec5a3b12ebb3c610c6046e6a5934f8f262e747c7a"
    },
    {
      "dataflow_id": "treasury.budget_papers",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2024-25",
        "line_item": "department_of_the_treasury",
        "paper": "bp4-agency-resourcing",
        "table": "table_1_agency_resourcing_by_portfolio_m"
      },
      "unit": "$ million",
      "time": "2024-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 301.0,
      "status": "Forecast",
      "attributes": {
        "artifact_date": "2024-05-14",
        "attribution": "Source: Australian Government, The Treasury",
        "budget_year": "2024-25",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "license": "CC-BY-4.0",
        "license_url": "https://creativecommons.org/licenses/by/4.0/",
        "paper": "Budget Paper No. 4",
        "paper_slug": "bp4-agency-resourcing",
        "publication_title": "Agency resourcing table",
        "schema_hash": "d1a529ef09ad69e5f3c0a2e6da36dcf4449ace0fad82c2a7f2af82ca1a5e281a",
        "source": "Australian Government, The Treasury",
        "source_url": "https://archive.budget.gov.au/2024-25/bp4/download/bp4_05_agency_resourcing_tables.pdf",
        "table_page": "12",
        "table_title": "Table 1: Agency resourcing by portfolio ($m)",
        "treasury_line_item": "Department of the Treasury",
        "treasury_period_label": "2024-25"
      },
      "source_artifact_id": "13ae98bc66404753efd5770ec5a3b12ebb3c610c6046e6a5934f8f262e747c7a"
    },
    {
      "dataflow_id": "treasury.budget_papers",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2024-25",
        "line_item": "department_of_finance",
        "paper": "bp4-agency-resourcing",
        "table": "table_1_agency_resourcing_by_portfolio_m"
      },
      "unit": "$ million",
      "time": "2022-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 377.0,
      "status": "Normal",
      "attributes": {
        "artifact_date": "2024-05-14",
        "attribution": "Source: Australian Government, The Treasury",
        "budget_year": "2024-25",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "license": "CC-BY-4.0",
        "license_url": "https://creativecommons.org/licenses/by/4.0/",
        "paper": "Budget Paper No. 4",
        "paper_slug": "bp4-agency-resourcing",
        "publication_title": "Agency resourcing table",
        "schema_hash": "d1a529ef09ad69e5f3c0a2e6da36dcf4449ace0fad82c2a7f2af82ca1a5e281a",
        "source": "Australian Government, The Treasury",
        "source_url": "https://archive.budget.gov.au/2024-25/bp4/download/bp4_05_agency_resourcing_tables.pdf",
        "table_page": "12",
        "table_title": "Table 1: Agency resourcing by portfolio ($m)",
        "treasury_line_item": "Department of Finance",
        "treasury_period_label": "2022-23"
      },
      "source_artifact_id": "13ae98bc66404753efd5770ec5a3b12ebb3c610c6046e6a5934f8f262e747c7a"
    },
    {
      "dataflow_id": "treasury.budget_papers",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2024-25",
        "line_item": "department_of_finance",
        "paper": "bp4-agency-resourcing",
        "table": "table_1_agency_resourcing_by_portfolio_m"
      },
      "unit": "$ million",
      "time": "2023-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 389.0,
      "status": "Estimated",
      "attributes": {
        "artifact_date": "2024-05-14",
        "attribution": "Source: Australian Government, The Treasury",
        "budget_year": "2024-25",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "license": "CC-BY-4.0",
        "license_url": "https://creativecommons.org/licenses/by/4.0/",
        "paper": "Budget Paper No. 4",
        "paper_slug": "bp4-agency-resourcing",
        "publication_title": "Agency resourcing table",
        "schema_hash": "d1a529ef09ad69e5f3c0a2e6da36dcf4449ace0fad82c2a7f2af82ca1a5e281a",
        "source": "Australian Government, The Treasury",
        "source_url": "https://archive.budget.gov.au/2024-25/bp4/download/bp4_05_agency_resourcing_tables.pdf",
        "table_page": "12",
        "table_title": "Table 1: Agency resourcing by portfolio ($m)",
        "treasury_line_item": "Department of Finance",
        "treasury_period_label": "2023-24"
      },
      "source_artifact_id": "13ae98bc66404753efd5770ec5a3b12ebb3c610c6046e6a5934f8f262e747c7a"
    },
    {
      "dataflow_id": "treasury.budget_papers",
      "measure_id": "value",
      "dimensions": {
        "budget_year": "2024-25",
        "line_item": "department_of_finance",
        "paper": "bp4-agency-resourcing",
        "table": "table_1_agency_resourcing_by_portfolio_m"
      },
      "unit": "$ million",
      "time": "2024-07-01T00:00:00+00:00",
      "time_precision": "Year",
      "value": 404.5,
      "status": "Forecast",
      "attributes": {
        "artifact_date": "2024-05-14",
        "attribution": "Source: Australian Government, The Treasury",
        "budget_year": "2024-25",
        "extraction_backend": "fixture-pdfplumber",
        "extraction_backend_version": "2026.1",
        "license": "CC-BY-4.0",
        "license_url": "https://creativecommons.org/licenses/by/4.0/",
        "paper": "Budget Paper No. 4",
        "paper_slug": "bp4-agency-resourcing",
        "publication_title": "Agency resourcing table",
        "schema_hash": "d1a529ef09ad69e5f3c0a2e6da36dcf4449ace0fad82c2a7f2af82ca1a5e281a",
        "source": "Australian Government, The Treasury",
        "source_url": "https://archive.budget.gov.au/2024-25/bp4/download/bp4_05_agency_resourcing_tables.pdf",
        "table_page": "12",
        "table_title": "Table 1: Agency resourcing by portfolio ($m)",
        "treasury_line_item": "Department of Finance",
        "treasury_period_label": "2024-25"
      },
      "source_artifact_id": "13ae98bc66404753efd5770ec5a3b12ebb3c610c6046e6a5934f8f262e747c7a"
    }
  ]
}
